<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.infonode</groupId>
    <artifactId>idw-gpl</artifactId>
    <version>1.8.0</version>
    <name>InfoNode Docking Windows</name>

    <description>InfoNode Docking Windows is a pure Java Swing based docking windows framework.</description>
    <url>http://www.infonode.net</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.release>8</maven.compiler.release>
    </properties>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
    </build>
	
    <scm>
        <connection>scm:git:git://github.com/REC-SPb-ETU/idw-gpl.git</connection>
        <developerConnection>scm:git:git://github.com/REC-SPb-ETU/idw-gpl.git</developerConnection>
        <tag>1.7.2</tag>
    </scm>
	
    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <uniqueVersion>false</uniqueVersion>
            <name>Snapshot Repository</name>
            <url>http://nexus.nic.etu:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>

        <repository>
            <id>releases</id>
            <name>Release Repository</name>
            <url>http://nexus.nic.etu:8081/nexus/content/repositories/releases/</url>
        </repository>
    </distributionManagement>
</project>